# cleverbot

./: example-cli.py  example-dpy_cog.py  pyproject.toml  readme.md
cleverbot/: __init__.py  client.py  services.py
