[tool.poetry]
name = "cleverbot"
version = "0.1.0"
description = "Cleverbot, a chatbot."
authors = ["justfoolingaround <kr.justfoolingaround@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
